# llm-calendar-assistant

./: .dockerignore  .env.sample  .gitattributes  .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.dev.md  README.md  alembic.ini  docker-compose.yml  env.docker.sample  env.sample  get_token.py  migrate_token.sh  pyproject.toml  requirements.txt  ruff.toml  start.sh  test_events.sh
alembic/: env.py
alembic/versions/: 84a75257200f_initial_migration.py
app/: config.py  demo.py  main.py
app/api/: calendar.py  endpoint.py  event.py  health.py  router.py  schema.py
app/calendar/: auth.py  client.py  config.py  schema.py  service.py
app/config/: app_config.py  llm_config.py  settings.py
app/core/: exceptions.py  node.py  pipeline.py  router.py
app/database/: config.py  database_utils.py  event.py  repository.py  session.py
app/handlers/: event_handlers.py
app/llm/: config.py  factory.py  processor.py
app/logging/: factory.py
app/middleware/: logger.py  logging.py
app/models/: google_calendar.py  schemas.py
app/pipeline/: base_node.py  classify_event.py  event_extraction_node.py  intent_classifier_node.py  pipeline.py  router.py  (+6 more)
docker/: Dockerfile.api  Dockerfile.celery  Dockerfile.flower  README.md  logs.sh  start.sh  start_api.sh  start_celery.sh  start_flower.sh  stop.sh
docs/: api-patterns.md  configuration-patterns.md  development-patterns.md  development.md  oauth-token-management.md  prompt-patterns.md  quick-start.md  service-setup.md
scripts/: init_token.sh  makemigration.sh  migrate.sh
tests/: test_db.py  test_pipeline_errors.py
(+37 files in other folders)
